added form for grain 1 info input on index.html, going to try storing AudioBuffer at end of recording

--- a/main.css
+++ b/main.css
@@ -30,3 +30,12 @@ table {
 h1 {
 	color: green;
 }
+
+fieldset {
+	margin: 1em;
+	border: solid black .1em;
+}
+
+input, label, legend {
+ 	margin: .7em;
+}
