--- a/main.css
+++ b/main.css
@@ -35,9 +35,44 @@ h1 {
 	color: green;
 }
 
-.add_grain_text {
+#app_container {
+	position: absolute;
+	z-index: 2;
+	background-color: gray;
+	opacity: 0.7;
+}
+
+.grain_block_box {
+	z-index: 2;
+	background-color: gray;
+	opacity: 0.7;
+}
+
+#rec_stop {
+	position: absolute;
+	left: 50%;
+	transform: translate(-50%, 30%);
+	cursor: pointer;
+
+	padding:10px;
+	padding-left: 50px;
+	padding-right: 50px;
+	border-radius: 15px;
+	font-family: 'Poppins', sans-serif;
+	font-size: 20pt;
+	color: white;
+	background-color: gray;
+}
+
+#rec_stop:active {
+	background-color: red;
+	color: white;
+}
+
+.add_grain_text, .remove_text {
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	cursor: pointer;
 }
