--- a/main.css
+++ b/main.css
@@ -48,10 +48,12 @@ h1 {
 	opacity: 0.7;
 }
 
+#rec_stop_wrapper {
+  display: flex;
+  justify-content: center;
+}
+
 #rec_stop {
-	position: absolute;
-	left: 50%;
-	transform: translate(-50%, 30%);
 	cursor: pointer;
 
 	padding:10px;
