--- a/main.css
+++ b/main.css
@@ -48,6 +48,12 @@ h1 {
 	opacity: 0.7;
 }
 
+.grain_record_box {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 #rec_stop_wrapper {
   display: flex;
   justify-content: center;
