--- a/app/main.css
+++ b/app/main.css
@@ -176,3 +176,147 @@ border-radius: 20px;
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+
+
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+#content-wrap {
+  padding-bottom: 2.5rem;    /* Footer height */
+}
+
+#footer {
+  position: absolute;
+  color: black;
+  bottom: 0;
+  width: 100%;
+  height: 3rem;
+  padding: 20px;
+  text-align: center;      /* Footer height */
+}
+
+footer p{
+  background-color: #f2f2f2;
+  display:inline-block;
+  text-align: center;
+}
+
+.main-title-container {
+  display: flex;
+  justify-content: center;
+  /* background-image: linear-gradient(blue, #f2f2f2); */
+}
+
+
+
+.main-nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: auto;
+  padding: 0;
+  width: 100%;
+  flex-direction: row;
+  width: 80vw;
+
+}
+
+.main-nav li {
+  list-style-type: none;
+}
+
+.main-nav a {
+  text-decoration: none;
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-top: 40px;
+  display: block;
+}
+
+.main-nav > li > a {
+  color: black;
+  font-size: 22px;
+}
+
+.main-nav > li > a:hover {
+  color: black;
+  text-shadow: #ffc0cb 2px 0 10px;
+}
+
+main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 400%;
+}
+
+.main-title-container a {
+  text-shadow: #ffc0cb 2px 0 10px;
+  text-decoration: none;
+}
+
+
+.homeButton a {
+  font-size: 250%;
+  margin-left: 0px;
+  margin-right: 10px;
+  padding-top: 0px;
+  padding-left: 0px;
+  text-align: left;
+  color: black;
+}
+
+.homeButton p {
+  transform: translateY(10px);
+}
+
+.homeButton a:hover{
+  color: blue;
+}
+
+.home-page-create{
+  position: absolute;
+  width: 80vw;
+  height: 100%;
+  left: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+  justify-content: space-evenly;
+}
+
+
+#createRoomID{
+  display: inline-block;
+  align-self: center;
+  border: none;
+  padding: 2rem 2rem;
+  text-decoration: none;
+  background: white;
+  font-family: sans-serif;
+  font-size: 1.8rem;
+  color: blue;
+  cursor: pointer;
+  text-align: center;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 20px;
+  margin-bottom: 250px;
+  border-color: blue;
+  border-style: solid;
+  touch-action: manipulation;
+  transition: all 235ms ease-in-out;
+  box-shadow: rgba(0, 0, 255, .3) 2px 20px 20px -3px;
+}
+
+#createRoomID:hover{
+background: blue;
+color:white;
+transform: translate3d(0, 2px, 0);
+}
