styling and trying to get form submission to work..not yet there

--- a/app/main.css
+++ b/app/main.css
@@ -55,7 +55,7 @@ table {
 body {
   font-family: "Roboto", sans-serif;
   background-color: white;
-background-image: linear-gradient(120deg, #fccb90 0%, #d57eeb 100%);
+  background-image: linear-gradient(120deg, #fccb90 0%, #d57eeb 100%);
 }
 
 h1 {
@@ -159,7 +159,6 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-
   background-color: white;
 }
 
@@ -343,37 +342,25 @@ main {
 
 /* The Overlay (background) */
 .overlay {
-  /* Height & width depends on how you want to reveal the overlay (see JS below) */
   height: 100%;
   width: 100%;
   z-index: 1;
-  /* Sit on top */
   left: 0;
   top: 0;
-  background-color: white;
-  /* Black fallback color */
-  background-color: rgba(255, 255, 255, 0.8);
-  /* Black w/opacity */
   overflow-x: hidden;
-  /* Disable horizontal scroll */
-  transition: 0.5s;
-  /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
 }
 
 /* Position the content inside the overlay */
 .overlay-content {
+  padding-top: 100px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   position: relative;
-  top: 20%;
-  /* 25% from the top */
   width: 100%;
-  /* 100% width */
   text-align: center;
-  /* Centered text/links */
   margin-top: 30px;
-  /* 30px top margin to avoid conflict with the close button on smaller screens */
+  color: white;
 }
 
 /* The navigation links inside the overlay */
@@ -383,13 +370,14 @@ main {
   font-size: 27px;
   color: black;
   width: 50%;
+  color: white;
   /* 100% width */
   display: inline-block;
   align-self: center;
   transition: 0.3s;
+  top: 40%;
   /* Transition effects on hover (color) */
   padding-top: 50px;
-  padding-bottom: 200px;
   /* border: 2px solid black;
   background-color: white; */
 }
@@ -463,7 +451,7 @@ main {
   height: 500px;
   padding: 20px;
   width: 320px;
-  z-index:10;
+  z-index: 10;
   margin-top: 110px;
   color: black;
   border-color: black;
@@ -497,17 +485,16 @@ main {
   border-style: solid;
   border-color: black;
   box-sizing: border-box;
-  color: #eee;
+  color: black;
   font-size: 18px;
   height: 100%;
   outline: 0;
   padding: 4px 20px 0;
   width: 100%;
-
 }
 
 .cut {
-  background-color:white;
+  background-color: white;
   border-radius: 10px;
   height: 20px;
   left: 20px;
@@ -522,8 +509,8 @@ main {
   width: 50px;
 }
 
-.input:focus ~ .cut,
-.input:not(:placeholder-shown) ~ .cut {
+.input:focus~.cut,
+.input:not(:placeholder-shown)~.cut {
   transform: translateY(8px);
 }
 
@@ -539,16 +526,16 @@ main {
   top: 20px;
 }
 
-.input:focus ~ .placeholder,
-.input:not(:placeholder-shown) ~ .placeholder {
+.input:focus~.placeholder,
+.input:not(:placeholder-shown)~.placeholder {
   transform: translateY(-30px) translateX(10px) scale(0.75);
 }
 
-.input:not(:placeholder-shown) ~ .placeholder {
+.input:not(:placeholder-shown)~.placeholder {
   color: #808097;
 }
 
-.input:focus ~ .placeholder {
+.input:focus~.placeholder {
   color: #dc2f55;
 }
 
@@ -571,61 +558,59 @@ main {
   background-color: #06b;
 }
 
-#roomDetailsID{
+#roomDetailsID {
   display: inline-block;
-    align-self: center;
-    border: none;
-    padding: 0.7rem 2rem;
-    text-decoration: none;
-    background: blue;
-    font-family: sans-serif;
-    font-size: 1.2rem;
-    color: blue;
-    text-align: center;
-    border-color: blue;
-    border-style: solid;
-    z-index: 10;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    width: 100%;
-    color: white;
+  align-self: center;
+  border: none;
+  padding: 0.7rem 2rem;
+  text-decoration: none;
+  background: blue;
+  font-family: sans-serif;
+  font-size: 1.2rem;
+  color: blue;
+  text-align: center;
+  border-color: blue;
+  border-style: solid;
+  z-index: 10;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  width: 100%;
+  color: white;
 }
 
-.roomWrapper{
-
-}
+.roomWrapper {}
 
 #rooms {
   display: flex;
-   flex-wrap: wrap;
-      align-items: flex-start;
-      justify-content: space-between;
-      margin: auto;
-      padding: 0;
-      width: 100%;
-      flex-direction: row;
-      width: 80vw;
-      padding-bottom: 20px;
-      padding-top: 100px;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: space-between;
+  margin: auto;
+  padding: 0;
+  width: 100%;
+  flex-direction: row;
+  width: 80vw;
+  padding-bottom: 20px;
+  padding-top: 100px;
 }
-#rooms >div  {
-  width: 200px;
-   height: 200px;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   border-style: solid;
-background-color: white;
 
+#rooms>div {
+  width: 200px;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-style: solid;
+  background-color: white;
   margin: 10px;
 }
 
-#rooms >div > a {
-    text-align: center;
-   text-align: center;
-   display: inline-block;
-   border-color: black;
-   font-size: 22px;
-     text-decoration: none;
+#rooms>div>a {
+  text-align: center;
+  text-align: center;
+  display: inline-block;
+  border-color: black;
+  font-size: 22px;
+  text-decoration: none;
   color: blue;
 }
