--- a/app/main.css
+++ b/app/main.css
@@ -586,7 +586,7 @@ main {
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
-      justify-content: flex-start;
+  justify-content: center;
 
   margin: auto;
   padding: 0;
