--- a/app/main.css
+++ b/app/main.css
@@ -57,6 +57,8 @@ body {
   font-family: "Roboto", sans-serif;
   background-color: white;
   background-image: linear-gradient(120deg, #fccb90 0%, #d57eeb 100%);
+  margin: 0;
+  padding: 0;
 }
 
 #title_name {
@@ -102,8 +104,13 @@ body {
   height: 100%;
   box-sizing: border-box;
   z-index: 5;
+  top: 0;
   color: white;
   cursor: pointer;
+}
+
+.record_text, .pause_text, .remove_text {
+  pointer-events: none;
 }
 
 .record_div {
@@ -183,11 +190,18 @@ body {
 
 #page-container {
   position: relative;
-  min-height: 100vh;
+  height: 100vh;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+
+.hidden {
+  display: none;
 }
 
 #content-wrap {
-  padding-bottom: 2.5rem;
+  
   /* Footer height */
 }
 
@@ -219,11 +233,10 @@ footer p {
   align-items: center;
   justify-content: space-between;
   margin: auto;
-  padding: 0;
-  width: 100%;
   flex-direction: row;
   width: 80vw;
-  padding-bottom: 20px;
+  margin-top: 20px;
+
 }
 
 .main-nav li {
@@ -232,10 +245,12 @@ footer p {
 
 .main-nav a {
   text-decoration: none;
-  padding-left: 0px;
-  padding-right: 0px;
-  padding-top: 40px;
+  /* padding-left: 0px; */
+  /* padding-right: 0px; */
+  /* padding-top: 40px; */
   display: block;
+  margin: 0;
+  padding: 0;
 }
 
 #about-button {
@@ -287,7 +302,7 @@ main {
 }
 
 #homeButton p {
-  transform: translateY(10px);
+  /* transform: translateY(10px); */
 }
 
 #homeButton p:hover {
@@ -306,6 +321,7 @@ main {
   align-items: center;
   margin: auto;
   justify-content: space-evenly;
+  bottom: 0;
 }
 
 #createRoomID {
@@ -320,10 +336,10 @@ main {
   color: blue;
   cursor: pointer;
   text-align: center;
-  margin-left: 10px;
-  margin-right: 10px;
-  margin-top: 20px;
-  margin-bottom: 250px;
+  /* margin-left: 10px; */
+  /* margin-right: 10px; */
+  /* margin-top: 20px; */
+  /* margin-bottom: 250px; */
   border-color: blue;
   border-style: solid;
   touch-action: manipulation;
@@ -385,6 +401,8 @@ main {
   right: 45px;
   font-size: 60px;
 }
+
+
 
 
 #saveRoomId {
@@ -627,6 +645,75 @@ main {
   text-decoration: none;
   color: black;
 }
+
+
+/* Slider custom styles */
+.slider {
+  width: 100%;
+  height: 15vh;
+  max-height: 110px;
+  border: 5px solid;
+  box-sizing: border-box;
+}
+
+.slider.red {
+
+  border-color: rgb(255, 74, 74);
+}
+.slider.green {
+  border-color: rgb(94, 203, 95);
+  
+}
+.slider.orange {
+  border-color: rgb(255, 153, 69);
+  
+}
+.slider.purple {
+  border-color: rgb(215, 101, 255);
+
+}
+
+
+.noUi-handle {
+  border: none;
+  background: none;
+  
+}
+
+.noUi-horizontal .noUi-handle {
+  height: 15vh;
+  max-height: calc(110px + 12px);
+  top: -11px;
+}
+
+/* Handle stripes;
+ */
+ .noUi-handle:before,
+ .noUi-handle:after {
+   display: none;
+ }
+
+
+ .red .noUi-connect, .red .record_div, .red .pause_div, .red .remove_div {
+   background: rgb(255, 74, 74);
+ }
+ .green .noUi-connect, .green .record_div, .green .pause_div, .green .remove_div {
+   background: rgb(94, 203, 95);
+ }
+ .orange .noUi-connect, .orange .record_div, .orange .pause_div, .orange .remove_div {
+   background: rgb(255, 153, 69);
+ }
+ .purple .noUi-connect, .purple .record_div, .purple .pause_div, .purple .remove_div {
+   background: rgb(215, 101, 255);
+ }
+ .blue .noUi-connect, .blue .record_div {
+   background: rgb(60, 91, 255);
+ }
+
+
+
+
+
 
 @media only screen and (max-width: 600px) {
 
