--- a/app/main.css
+++ b/app/main.css
@@ -215,7 +215,7 @@ body {
 #page-container {
   position: relative;
   height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
 }
@@ -768,6 +768,20 @@ main {
 
 
 @media only screen and (max-width: 800px) {
+.overlay-content {
+      padding-top: 0px;
 
+      margin-top: 0px;
 
+}
+
+#rooms {
+    padding-top: 0;
+    margin-top: 0;
+}
+
+#saveForm {
+  padding-top: 0px;
+  margin-top: 0px;
+}
 }
